feat(): ensure DELETE /customers/{uuid} can delete a customer (#18)
