# routes/web.php
@@ -17,3 +17,4 @@ $router->post('/customers', 'CreateCustomerController@handle');
 $router->get('/customers', 'ListAllCustomersController@handle');
 $router->get('/customers/{document}', 'ListCustomerByDocument@handle');
 $router->put('/customers/{uuid}', 'UpdateCustomerController@handle');
+$router->delete('/customers/{uuid}', 'DeleteACustomerController@handle');
